--- a/index.html
+++ b/index.html
@@ -1,9 +1,115 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
+		<title> CV Hicham TOUZALINE </title>
+		<meta charset ="utf-8">
 	</head>
 	<body>
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
+		<h1>Hicham TOUZALINE-Ingénieur double compétence Electronqiue et Informatique </h1>
+	<div id="cv">
+		<div id="Informations">
+		<h2>Informations</h2>
+			<img aly="photo" src="photo.jpg"/>
+		<dl>
+			<li><ul><dt>Hicham TOUZALINE</dt></ul></li>
+			<li><ul><dt>Résidence Allix Bâtiment F Logement 123F,</dt></ul></li>
+			<li><ul><dt> 2 rue soeur Bouvier,69005 Lyon</dt></ul></li>
+			<li><ul><dt>France</dt></ul></li>
+			<li><ul><dt>Email : touzalineh@gmail.com</dt></ul></li>
+			<li><ul><dt>Tel : 06 05 55 39 49</dt></ul></li>
+			<li><ul><dt>Permis : B</dt></ul></li>
+		<dl>
+			</li>
+		<li>
+			<h2> Formations </h2>
+			<dl>
+				<ul><li><dt>2018-Master Compétences Complémentaires en Informatique</dt>
+					<dd>Université Claude Bernard Lyon 1</dd>
+					<dd>Lyon, France</dd></ul>
+				<ul><li><dt>2017-Master Commercialisation en Instrumentation Scientifique </dt>
+					<dd>Université Aix-Mareille</dd>
+					<dd>Marseille, France</dd></ul>
+				<ul><li><dt>2015-Master Ingénierie de l'Instrumentation Electronique</dt>
+					<dd>Université des Sciences et de la Technologie Houari Boumediene</dd>
+					<dd>Alger, Algérie</dd></ul></li>
+			</dl>
+			</li>
+		<li>
+			<h2> Experiences professionelles </h2>
+			<dl>
+				<ul><li><dt>2017-Stage-Ingénieur technico-commercial</dt>
+					<dd>SYSMA, Aix en Provence</dd>
+					<dd>France</dd></ul>
+					<ul><ul><dd>-Réaliser les études ainsi que le suivi technique et commercial des projets.</ul></ul></dd> 
+					<ul><ul><dd>-Définition de nouvelles fiches produits.</ul></ul></dd> 
+					<ul><ul><dd>-Etablir les devis, bordereaux de livraison des projets en cours de réalisation ainsi que la Prospection (Mailing et Phoning).</ul></ul></dd>
+					<ul><ul><dd>-Web marketing (Gestion de site e-commerce).</ul></ul></dd> 
+					<ul><ul><dd>-Formation sur les produits et prise en compte de l'activité des sociétés tant au niveau produits que prestation de services.</ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>2016-Ingénieur Ascenseurs (Mission 3 mois)</dt>
+					<dd>Vertical solution distributeur exclusif d’OTIS Elevator, Alger</dd>
+					<dd>Algérie</dd></ul>
+					<ul><ul><dd>-Suivi des projets.</ul></ul></dd> 
+					<ul><ul><dd>-Conseiller service en après-vente.</ul></ul></dd> 
+					<ul><ul><dd>-Réalisation des maintenances préventives et curatives (Hardware et Software).</ul></ul></dd>
+					<br></br>
+				<ul><li><dt>2016-Ingénieur Ascenseurs (Mission 4 mois).</dt>
+					<dd>SLK Ascenseurs distributeur officiel de THYSSENKRUPP ELEVATOR, Alger</dd>
+					<dd>Algérie</dd></ul>
+					<ul><ul><dd>-Réaliser l’entretien planifié d’un parc d’ascenseurs.</ul></ul></dd> 
+					<ul><ul><dd>-Réaliser le dépannage d’ascenseurs.</ul></ul></dd> 
+					<ul><ul><dd>-Conseiller service en après-vente.</ul></ul></dd>
+					<br></br>
+				<ul><li><dt>2015-Stage Développement d’un système portable à base de PSoC dédié à l’acquisition du signal (Mission 6 mois).</dt>
+					<dd>Laboratoire d'instrumentation,Université des Sciences et de la Technologie Houari Boumediene, Alger</dd>
+					<dd>Algérie</dd></ul>
+					<ul><ul><dd>-L’affichage instantané du signal, transmission sans fil des données vers un PC.</ul></ul></dd> 
+					<ul><ul><dd>-Peu encombrant ayant une autonomie suffisante en termes de temps.</ul></ul></dd>
+			</dl>
+			</li>
+		<li>
+			<h2> Compétences </h2>
+			<dl>
+				<ul><li><dt>Informatiques</dt></ul>
+					<ul><ul><dd>-Bases de données : SQL, SGBD MySQL, Oracle.</ul></ul></dd> 
+					<ul><ul><dd>-Programmation : C, C++, C#, Python, Java.</ul></ul></dd> 
+					<ul><ul><dd>-Génie logiciel : UML.</ul></ul></dd>
+					<ul><ul><dd>-Logiciels/Plateformes : Windows, Linux, Visual Studio, SQLDeveloper.</ul></ul></dd> 
+					<ul><ul><dd>-Autres: PLM, IoT, SI pour la gestion, Sécurité des SI, ERP/SAP, Interface H/M, Entrepôt de données</ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>Electroniques</dt></ul>
+					<ul><ul><dd>-Logiciels : Audacity, Matlab, LabVIEW, PSoC Creator et Microwind.</ul></ul></dd> 
+					<ul><ul><dd>-Programmation : Arduino, PSoC, Raspberry Pi, FPGA, Matlab, List et Ladder. </ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>Commerciales</dt></ul>
+					<ul><ul><dd>-Réalisation de reporting, élaboration des cahiers des charges, devis, Web Marketing, e-mailing, phoning et CRM.</ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>Linguistiques</dt></ul>
+					<ul><ul><dd>- Anglais : Upper Intermediate, Arabe : langue maternelle, Espagnol : débutant.</ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>Bureautiques</dt></ul>
+					<ul><ul><dd>- Maîtrise du Pack Office : Word, Excel et Power Point. </ul></ul></dd> 
+				</dl>
+				</li>
+		
+		<li>
+			<h2> Centres d'intérêt </h2>
+			<dl>
+				<ul><li><dt>Nouvelles technologies</dt></ul>
+					<ul><ul><dd>-Smartphones, Robotique et gadget High-Tech.</ul></ul></dd>  
+					<br></br>
+				<ul><li><dt>Sport</dt></ul>
+					<ul><ul><dd>-Volleyball (compétition inter lycée).</ul></ul></dd> 
+					<br></br>
+				<ul><li><dt>Bénévolat</dt></ul>
+					<ul><ul><dd>-Association el ihssane.</ul></ul></dd> 
+					<br></br>
+				</dl>
+				</li>
+				
+		
+
 	</body>
+
 </html>
