--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<head>
 		<title> CV Hicham TOUZALINE </title>
 		<meta charset ="utf-8">
+		<link href="bootstrap.min.css" rel="stylesheet">
+		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="bootstrap.min.js"></script>
 	</head>
 	<body>
 		<h1>Hicham TOUZALINE-Ingénieur double compétence Electronqiue et Informatique </h1>
